Added events to view. Refacored ui section

--- a/ep-des-n-con-costs.html
+++ b/ep-des-n-con-costs.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <div class="container">
-            <div class="ep-des-n-con-costs">
+            <div id="ep-des-n-con-costs" class="ep-des-n-con-costs">
                 <div id="costs-main-params" class="costs-main-params">
                     <h2>Основные параметры</h2>
                     <div class="costs-main-params-floors">
